--- a/README.wiki
+++ b/README.wiki
@@ -3,7 +3,7 @@
 |license     = LGPL-3.0
 |status      = beta
 |type        = parser function
-|author      = Curse Inc. Wiki Platform Team, Alexia E. Smith ([[User:Alexia E. Smith|Alexia E. Smith]])
+|author      = Hydra Wiki Platform Team, Alexia E. Smith ([[User:Alexia E. Smith|Alexia E. Smith]])
 |version     = 0.5.0
 |update      = 2018-10-15
 |mediawiki   = 1.31+
